[package]
name = "leetcode-rust"
version = "0.1.0"
authors = ["alei <rayingecho@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.12.1", features = [
    "blocking",
    "json",
    "native-tls-alpn",
    "gzip",
] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8.4"
regex = "1.3.4"
futures = { version = "0.3.5", features = ["thread-pool"] }
surf = "2.3.1"
dotenv = "0.15.0"


[lib]
doctest = false
test = true